Fix MCP tool and add MCP tests

--- a/fgql-analyzer/package.json
+++ b/fgql-analyzer/package.json
@@ -11,6 +11,7 @@
   "scripts": {
     "start": "node src/cli.js",
     "test": "node --test tests/",
+    "test:mcp": "node test-mcp-complete.js",
     "lint": "eslint src/ tests/",
     "format": "prettier --write src/ tests/"
   },
